--- a/方案设计.md
+++ b/方案设计.md
@@ -1,3 +1,3 @@
 技术实现
 
-在网上找到相应的数据资源，通过net/http发送请求，结构化提取相关数据。 根据用户输入指令返回对应数据。通过对输入字符串切片处理，以及数据资源返回结果分辨用户输入的省市以及省市的对应关系是否正确。正确分辨直辖市，特别行政区，普通市的区别。如：湖南省深圳市，越州市，广州省等都会提示输入异常。并支持查询省，省+市，市三种结构查询方式。
+在网上找到相应的数据资源，通过net/http发送请求，结构化提取相关数据。 根据用户输入指令返回对应数据。通过对输入字符串切片处理，以及数据资源返回结果分辨用户输入的省市以及省市的对应关系是否正确。正确分辨直辖市，特别行政区，普通市的区别。如：湖南省深圳市，越州市，广州省等都会提示输入异常。并支持查询全国，省，省+市，市四种结构查询方式。
