--- a/说明.md
+++ b/说明.md
@@ -1,6 +1,6 @@
 ### 背景
 
-日前，奥密克戎病毒在全国掀起又一波疫情，形势十分严峻，人人自危。在此情况下，疫情资讯成为人们密切关注的话题，而疫情资讯获取渠道均需通过第三方APP获得，不够便捷有效，特设计该机器人实时查询全国各地疫情数据，高效掌握疫情资讯，及时相关防护措施和咨询电话，与全国人民共同抗疫。
+日前，奥密克戎病毒在全国掀起又一波疫情，形势十分严峻，人人自危。在此情况下，疫情资讯成为人们密切关注的话题，而疫情资讯获取渠道均需通过第三方APP获得，不够便捷有效，特设计该机器人实时查询全国各地疫情数据，高效掌握疫情资讯，及时了解相关防护措施和咨询电话，与全国人民共同抗疫。
 
 ### 基本介绍
 
@@ -34,7 +34,7 @@
 
 ​	返回最新广东省疫情相关数据
 
-- 广东省深圳市 或者 深圳市 或者 香港市
+- 广东省深圳市 或者 深圳市
 
 ​	返回最新深圳市疫情相关数据
 
